--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,15 @@
     "prettier": "prettier --single-quote --print-width 80 --trailing-comma all --write 'src/**/*.js'"
   },
   "dependencies": {
+    "apollo-server-express": "^1.3.6",
     "body-parser": "^1.18.3",
     "cross-env": "^5.1.6",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "faker": "^4.1.0",
+    "graphql": "^0.13.2",
+    "graphql-date": "^1.0.3",
+    "graphql-tools": "^3.0.2",
+    "mongoose": "^5.1.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
