--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "graphql": "^0.13.2",
     "graphql-date": "^1.0.3",
     "graphql-tools": "^3.0.2",
+    "jsonwebtoken": "^8.2.2",
     "mongoose": "^5.1.3"
   },
   "devDependencies": {
