--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,9 @@
   "devDependencies": {
     "jest-expo": "~27.0.0",
     "react-native-scripts": "1.14.0",
-    "react-test-renderer": "16.3.1"
+    "react-test-renderer": "16.3.1",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-logger": "^3.0.6"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -19,11 +21,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "apollo-client": "^2.3.2",
+    "apollo-client": "1.9.0-0",
     "expo": "^27.0.1",
     "graphql-tag": "^2.9.2",
     "react": "16.3.1",
-    "react-apollo": "^2.1.4",
+    "react-apollo": "1.4.8",
     "react-native": "~0.55.2",
     "react-navigation": "^2.0.4",
     "redux": "^4.0.0",
