--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,8 @@
     "react-apollo": "1.4.8",
     "react-native": "~0.55.2",
     "react-navigation": "^2.0.4",
+    "react-navigation-redux-helpers": "^1.1.2",
+    "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^3.3.0"
