--- a/app/package.json
+++ b/app/package.json
@@ -24,9 +24,11 @@
     "apollo-client": "1.9.0-0",
     "expo": "^27.0.1",
     "graphql-tag": "^2.9.2",
+    "prop-types": "^15.6.1",
     "react": "16.3.1",
     "react-apollo": "1.4.8",
     "react-native": "~0.55.2",
+    "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.0.4",
     "react-navigation-redux-helpers": "^1.1.2",
     "react-redux": "^5.0.7",
