--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/react-native-action-sheet": "^1.0.2",
     "apollo-client": "1.9.0-0",
     "expo": "^27.0.1",
     "graphql-tag": "^2.9.2",
